--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -3,4 +3,6 @@
 
     <string name="hello_world">Hello world!</string>
     <string name="action_settings">Settings</string>
+    <string name="title_activity_cuatrimestres">Cuatrimestres</string>
+    <string name="title_activity_listado_grado">listado_grado</string>
 </resources>
