--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -3,6 +3,13 @@
 
     <string name="hello_world">Hello world!</string>
     <string name="action_settings">Settings</string>
+    
+    <string name="title_activity_cuatrimestres">Cuatrimestres</string>
+    <string name="sample_text_image">Imagen asignatura</string>
+    <string name="sample_text_header">texto</string>
+    <string name="sample_text_footer">footer</string>
+    <string name="title_activity_listado_grado">Grados y carreras</string>
+    <string name="title_activity_laboratorio_listado">LaboratorioListadoActivity</string>
 
     <!-- Strings de IncidenciaActivity -->
     <string name="enviar_incidencia">Enviar incidencia</string>
