--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -9,8 +9,8 @@
     <string name="sample_text_header">texto</string>
     <string name="sample_text_footer">footer</string>
     <string name="title_activity_listado_grado">Grados y carreras</string>
-    <string name="title_activity_laboratorio_listado">LaboratorioListadoActivity</string>
-
+    <string name="title_activity_laboratorio_listado">Laboratorios</string>
+    <string name="title_activity_asignatura_listado">Asignaturas</string>
     <!-- Strings de IncidenciaActivity -->
     <string name="enviar_incidencia">Enviar incidencia</string>
     <string name="boton_enviar_incidencia">Enviar</string>
