--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -12,7 +12,8 @@
     <string name="title_activity_listado_grado">Grados y carreras</string>
     <string name="title_activity_asignatura_listado">Asignaturas</string>
     <string name="cuatrimestreSpinner">Cuatrimestre</string>
-    <string name="especialdadSpinner">Especialidad</string>
+    <string name="incidencia">Enviar incidencia</string>
+    <string name="Desconexion">Salir</string>
 
     <!-- Strings de IncidenciaActivity -->
     <string name="enviar_incidencia">Enviar incidencia</string>
