--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -27,5 +27,6 @@
     <string name="title_activity_profesor_pantalla">Profesor</string>
     <string name="title_activity_perfil">Ayúdanos</string>
     <string name="title_activity_correo_profesor">Correo</string>
+    <string name="title_activity_laboratorio_pantalla">laboratorioPantalla</string>
 
 </resources>
