Pantalla lista laboratorio

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -17,7 +17,7 @@
 
     <!-- Strings de IncidenciaActivity -->
     <string name="enviar_incidencia">Enviar incidencia</string>
-    <string name="boton_enviar_incidencia">Enviar</string>
+    <string name="boton_enviar_incidencia">ENVIAR</string>
     <string name="hint_enviar_incidencia">Describe aquí la incidencia...</string>
     <string name="title_activity_laboratorio_listado_">Laboratorios</string>
     <string name="title_activity_asignatura_pantalla">AsignaturaPantalla</string>
