Pequeña correción en Acerca De.

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -41,6 +41,6 @@
     <string name="desarrolladores">Íñigo Alonso Ruiz\nJavier Beltrán Jorba\nJorge Cáncer
         Gil\nAlejandro Dieste Cortés</string>
     <string name="titulo_diseñadora">Diseñadora</string>
-    <string name="diseñadora">Lara noseque</string>
+    <string name="diseñadora">Lara Pancorbo Lambán</string>
 
 </resources>
